--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="navigation">
-        <a class="navigation-link" href="index.html">
+      <div class="navigation-logo">
+        <a href="index.html">
           <img
-            class="logo"
             src="images/logo.svg"
             width="139"
             height="70"
             alt="Логотип города Седона"
           />
         </a>
-        <ul class="navigtion-list">
+      </div>
+      <nav class="navigation">
+        <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
           </li>
@@ -60,179 +61,211 @@
         </ul>
       </nav>
     </header>
-    <main class="main-index">
-      <!--Главный баннер-->
-      <section class="main-banner">
-        <h1 class="visually-hidden">Каньон Седона</h1>
-        <img
-          class="main-banner-welcome"
-          src="images/welcome.svg"
-          width="458"
-          height="352"
-          alt="Добро пожаловать в великолепный Каньон Седона"
-        />
-      </section>
-      <div class="body welcome">
-        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p class="five_advantages">
-          Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
-        </p>
-      </div>
-      <!--Блок с преимуществами-->
-      <section class="advantages">
-        <h2 class="visually-hidden">Основные преимущества</h2>
-        <ol class="advantages-list">
-          <li class="advantages-item-image">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">— №1 —</p>
-            <p class="advantages-description">
-              Седона — не аттракцион для туристов, там течёт своя жизнь
-            </p>
-            <img
-              class="advantages-first-image"
-              src="images/photo-1.jpg"
-              alt="Изображение города Седона"
-              width="800"
-              height="384"
-            />
-            <ul class="advantages services">
-              <li class="services-item">
+    <main class="main-container main-index">
+      <div class="page-container">
+        <!--Главный баннер-->
+        <section class="main-banner">
+          <h1 class="visually-hidden">Каньон Седона</h1>
+          <img
+            class="main-banner-welcome"
+            src="images/welcome.svg"
+            width="458"
+            height="352"
+            alt="Добро пожаловать в великолепный Каньон Седона"
+          />
+        </section>
+        <div class="body welcome">
+          <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="five_advantages">
+            Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
+          </p>
+        </div>
+
+        <!--Блок с преимуществами-->
+        <section class="advantages">
+          <h2 class="visually-hidden">Основные преимущества</h2>
+          <ol class="advantages-list">
+            <li class="advantages-item">
+              <div class="advantages-item-city">
+                <h3 class="advantages-title">Настоящий городок</h3>
+                <p class="advantages-description">— №1 —</p>
+                <p class="advantages-description">
+                  Седона — не аттракцион для туристов, там течёт своя жизнь
+                </p>
+              </div>
+              <div class="advantages-first-image">
+                <img
+                  src="images/photo-1.jpg"
+                  alt="Изображение города Седона"
+                  width="800"
+                  height="384"
+                />
+              </div>
+            </li>
+            <!-- <div class="services"> -->
+            <li class="advantages-services">
+              <div class="services-item">
                 <h3 class="advantages-title">Жильё</h3>
                 <p class="advantages-description">
                   Рекомендуем пожить в настоящем мотеле всё как в кино!
                 </p>
-              </li>
-              <li class="services-item">
+              </div>
+            </li>
+
+            <li class="advantages-services">
+              <div class="services-item">
                 <h3 class="advantages-title">Еда</h3>
                 <p class="advantages-description">
                   Всегда заказывайте топовый фирменный бургер, вы не
                   разочаруетесь!
                 </p>
-              </li>
-              <li class="services-item">
+              </div>
+            </li>
+            <li class="advantages-services">
+              <div class="services-item">
                 <h3 class="advantages-title">Сувениры</h3>
                 <p class="advantages-description">
                   Не только китайского, но и настоящего местного производства!
                 </p>
+              </div>
+            </li>
+            <!-- </div> -->
+            <li class="advantages-item">
+              <div class="advantages-second-image">
+                <img
+                  src="images/photo-2.jpg"
+                  alt="Изображение моста дьявола"
+                  width="800"
+                  height="384"
+                />
+              </div>
+              <div class="advantages-item-bridge">
+                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <p class="advantages-description">— №2 —</p>
+                <p class="advantages-description">
+                  Да, по нему можно пройти! Если вы осмелитесь, разумеется
+                </p>
+              </div>
+            </li>
+            <section class="advantages-services last">
+              <li class="advantages-services">
+                <div class="advantages-item-last">
+                  <h3 class="advantages-title">Небольшая площадь</h3>
+                  <p class="advantages-description">— №3 —</p>
+                  <p class="advantages-description">
+                    Все достопримечательности находятся очень близко
+                  </p>
+                </div>
               </li>
-            </ul>
-          </li>
-          <li class="advantages-item-image">
-            <img
-              class="advantages-image-second"
-              src="images/photo-2.jpg"
-              alt="Изображение моста дьявола"
-              width="800"
-              height="384"
+              <li class="advantages-services">
+                <div class="advantages-item-last">
+                  <h3 class="advantages-title">Красивая дорога</h3>
+                  <p class="advantages-description">— №4 —</p>
+                  <p class="advantages-description">
+                    Ехать в Седону из Лас-Вегаса совсем не скучно!
+                  </p>
+                </div>
+              </li>
+              <li class="advantages-services">
+                <div class="advantages-item-last">
+                  <h3 class="advantages-title">Мало туристов</h3>
+                  <p class="advantages-description">— №5 —</p>
+                  <p class="advantages-description">
+                    Большинство едет в Гранд Каньон и толпится там
+                  </p>
+                </div>
+              </li>
+            </section>
+          </ol>
+        </section>
+
+        <!-- Блок с вопросом -->
+        <div class="question">
+          <section id="question" class="question-block">
+            <h2 class="visually-hidden">Бронирование гостинницы</h2>
+            <p>Заинтересовались?</p>
+            <p class="question-date">
+              Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+              предложения гостиниц в Седоне
+            </p>
+            <button class="question question-button" type="submit">
+              поиск гостинницы в седоне
+            </button>
+          </section>
+        </div>
+        <!-- Форма подписки -->
+        <section class="subscription">
+          <h2 class="visually-hidden">Подписаться на рассылку</h2>
+          <p>Подпишитесь на рассылку</p>
+          <p class="subscription-text">
+            Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
+          <form
+            class="subscription-form"
+            action="https://echo.htmlacademy.ru/"
+            method="post"
+          >
+            <input
+              type="email"
+              name="Ваш E-mail"
+              placeholder="Ваш e-mail"
+              required
             />
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">— №2 —</p>
-            <p class="advantages-description">
-              Да, по нему можно пройти! Если вы осмелитесь, разумеется
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">— №3 —</p>
-            <p class="advantages-description">
-              Все достопримечательности находятся очень близко
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">— №4 —</p>
-            <p class="advantages-description">
-              Ехать в Седону из Лас-Вегаса совсем не скучно!
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">— №5 —</p>
-            <p class="advantages-description">
-              Большинство едет в Гранд Каньон и толпится там
-            </p>
-          </li>
-        </ol>
-      </section>
-
-      <!-- Блок с вопросом -->
-      <section id="question" class="question-block">
-        <h2 class="visually-hidden">Бронирование гостинницы</h2>
-        <p>Заинтересовались?</p>
-        <p class="question-date">
-          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-          предложения гостиниц в Седоне
-        </p>
-        <button class="question question-button" type="submit">
-          поиск гостинницы в седоне
-        </button>
-      </section>
-
-      <!-- Форма подписки -->
-      <section class="subscription">
-        <h2 class="visually-hidden">Подписаться на рассылку</h2>
-        <p>Подпишитесь на рассылку</p>
-        <p class="subscription-text">
-          Только полезная информация и никакого спама, честное бойскаутское!
-        </p>
-        <form
-          class="subscription-form"
-          action="https://echo.htmlacademy.ru/"
-          method="post"
-        >
-          <input
-            type="email"
-            name="Ваш E-mail"
-            placeholder="Ваш e-mail"
-            required
-          />
-          <button class="subscribe-button" type="submit">Подписаться</button>
-        </form>
-      </section>
+            <button class="subscribe-button" type="submit">Подписаться</button>
+          </form>
+        </section>
+      </div>
     </main>
 
     <!-- Подвал сайта -->
     <footer class="page-footer">
-      <section class="footer-social">
-        <h2 class="visually-hidden">Ссылки на социальные сети</h2>
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">ВКонтакте</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="button" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Телеграм</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Ютуб</span>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-        <a class="contackts-phone" href="tel:78128121212">+7 (812) 812-12-12</a>
-      </section>
-      <section class="footer-social">
-        <h2 class="visually-hidden">Копирайт</h2>
-        <a
-          class="copyright-link"
-          href="https://up.htmlacademy.ru/htmlcss/34/module/3/item/13"
-          target="_blank"
-        >
-          <img
-            class="copyright"
-            src="images/copyright.svg"
-            width="115"
-            height="33"
-            alt="Копирайт htmlacademy"
-          />
-        </a>
-      </section>
+      <div class="page-footer-container">
+        <section class="footer-social">
+          <h2 class="visually-hidden">Ссылки на социальные сети</h2>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Телеграм</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a
+                class="button"
+                href="https://www.youtube.com/user/htmlacademyru"
+              >
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer-contacts">
+          <h2 class="visually-hidden">Контакты</h2>
+          <a class="contackts-phone" href="tel:78128121212"
+            >+7 (812) 812-12-12</a
+          >
+        </section>
+        <section class="footer-copiright">
+          <h2 class="visually-hidden">Копирайт</h2>
+          <a
+            class="copyright-link"
+            href="https://up.htmlacademy.ru/htmlcss/34/module/3/item/13"
+            target="_blank"
+          >
+            <img
+              class="copyright"
+              src="images/copyright.svg"
+              width="115"
+              height="33"
+              alt="Копирайт htmlacademy"
+            />
+          </a>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
