--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <header class="page-header">
-      <!--  <div class="navigation-logo">
-
-      </div> -->
-
-      <nav class="navigation">
+       <nav class="navigation">
         <a class="logo" href="index.html">
           <img
             src="images/logo.svg"
@@ -64,6 +60,7 @@
     </header>
     <main class="main-container main-index">
       <div class="page-container">
+
         <!--Главный баннер-->
         <section class="main-banner">
           <h1 class="visually-hidden">Каньон Седона</h1>
@@ -75,13 +72,14 @@
             alt="Добро пожаловать в великолепный Каньон Седона"
           />
         </section>
-        <div class="body welcome">
+        <div class="body-welcome">
           <p class="name-block">
             Седона — небольшой городок в Аризоне, заслуживающий большего!
           </p>
           <p class="description-text">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
           </p>
+
         </div>
 
         <!--Блок с преимуществами-->
@@ -148,21 +146,21 @@
           </ul>
           <ul class="advantages-services">
             <li class="services-item">
-              <h3 class="advantages-title">Небольшая площадь</h3>
+              <h3 class="advantages-title">Небольшая<br>площадь</h3>
               <p class="advantages-description">— №3 —</p>
               <p class="advantages-description">
                 Все достопримечательности находятся очень близко
               </p>
             </li>
             <li class="services-item">
-              <h3 class="advantages-title">Красивая дорога</h3>
+              <h3 class="advantages-title">Красивая<br>дорога</h3>
               <p class="advantages-description">— №4 —</p>
               <p class="advantages-description">
                 Ехать в Седону из Лас-Вегаса совсем не скучно!
               </p>
             </li>
             <li class="services-item">
-              <h3 class="advantages-title">Мало туристов</h3>
+              <h3 class="advantages-title">Мало<br>туристов</h3>
               <p class="advantages-description">— №5 —</p>
               <p class="advantages-description">
                 Большинство едет в Гранд Каньон и толпится там
