--- a/index.html
+++ b/index.html
@@ -170,19 +170,19 @@
         </section>
 
         <!-- Блок с вопросом -->
-        <div class="question">
+
           <section id="question" class="question-block">
             <h2 class="visually-hidden">Бронирование гостинницы</h2>
             <p class="name-block">Заинтересовались?</p>
             <p class="description-text">
-              Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+              Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
               предложения гостиниц в Седоне
             </p>
             <button class="question question-button" type="submit">
               поиск гостинницы в седоне
             </button>
           </section>
-        </div>
+
         <!-- Форма подписки -->
         <section class="subscription">
           <h2 class="visually-hidden">Подписаться на рассылку</h2>
