--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="page-header">
-       <nav class="navigation">
+      <nav class="navigation">
         <a class="logo" href="index.html">
           <img
             src="images/logo.svg"
@@ -31,7 +31,8 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <img class="search"
+              <img
+                class="search"
                 src="images/search.svg"
                 width="18"
                 height="18"
@@ -42,7 +43,8 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <img class="favorite"
+              <img
+                class="favorite"
                 src="images/favorite.svg"
                 width="18"
                 height="17"
@@ -51,16 +53,16 @@
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-
-            <button class="want-button" type="submit">Хочу сюда</button>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#question">
+              <span>ХОЧУ СЮДА</span>
             </a>
-
+          </li>
         </ul>
       </nav>
     </header>
     <main class="main-container main-index">
       <div class="page-container">
-
         <!--Главный баннер-->
         <section class="main-banner">
           <h1 class="visually-hidden">Каньон Седона</h1>
@@ -74,12 +76,11 @@
         </section>
         <div class="body-welcome">
           <p class="name-block">
-            Седона — небольшой городок в Аризоне, заслуживающий большего!
+            Седона — небольшой городок в Аризоне,<br />заслуживающий большего!
           </p>
           <p class="description-text">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
           </p>
-
         </div>
 
         <!--Блок с преимуществами-->
@@ -146,21 +147,21 @@
           </ul>
           <ul class="advantages-services">
             <li class="services-item">
-              <h3 class="advantages-title">Небольшая<br>площадь</h3>
+              <h3 class="advantages-title">Небольшая<br />площадь</h3>
               <p class="advantages-description">— №3 —</p>
               <p class="advantages-description">
                 Все достопримечательности находятся очень близко
               </p>
             </li>
             <li class="services-item">
-              <h3 class="advantages-title">Красивая<br>дорога</h3>
+              <h3 class="advantages-title">Красивая<br />дорога</h3>
               <p class="advantages-description">— №4 —</p>
               <p class="advantages-description">
                 Ехать в Седону из Лас-Вегаса совсем не скучно!
               </p>
             </li>
             <li class="services-item">
-              <h3 class="advantages-title">Мало<br>туристов</h3>
+              <h3 class="advantages-title">Мало<br />туристов</h3>
               <p class="advantages-description">— №5 —</p>
               <p class="advantages-description">
                 Большинство едет в Гранд Каньон и толпится там
@@ -171,24 +172,25 @@
 
         <!-- Блок с вопросом -->
 
-          <section id="question" class="question-block">
-            <h2 class="visually-hidden">Бронирование гостинницы</h2>
-            <p class="name-block">Заинтересовались?</p>
-            <p class="description-text">
-              Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
-              предложения гостиниц в Седоне
-            </p>
-            <button class="question question-button" type="submit">
-              поиск гостинницы в седоне
-            </button>
-          </section>
+        <section id="question" class="question-block">
+          <h2 class="visually-hidden">Бронирование гостинницы</h2>
+          <p class="name-block">Заинтересовались?</p>
+          <p class="description-text">
+            Укажите предполагаемые даты поездки,<br />и мы покажем вам лучшие
+            предложения гостиниц в Седоне
+          </p>
+          <button class="question question-button" type="submit">
+            поиск гостинницы в седоне
+          </button>
+        </section>
 
         <!-- Форма подписки -->
         <section class="subscription">
           <h2 class="visually-hidden">Подписаться на рассылку</h2>
           <p class="name-block">Подпишитесь на рассылку</p>
           <p class="description-text">
-            Только полезная информация и никакого спама, честное бойскаутское!
+            Только полезная информация и никакого спама,<br />честное
+            бойскаутское!
           </p>
           <form
             class="subscription-form"
