--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a class="logo" href="index.html">
-          <img
-            src="images/logo.svg"
-            width="139"
-            height="70"
-            alt="Логотип города Седона"
-          />
-        </a>
+        <div class="logotype">
+          <a class="logo" href="index.html">
+            <img
+              src="images/logo.svg"
+              width="139"
+              height="70"
+              alt="Логотип города Седона"
+            />
+        </div>
+          </a>
+        </div>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
@@ -53,7 +56,7 @@
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-item-button">
             <a class="navigation-link" href="#question">
               <span>ХОЧУ СЮДА</span>
             </a>
