--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="navigation-link" href="#">Гостинницы</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-user">
+        <!-- <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <img
@@ -61,13 +61,13 @@
               <span>ХОЧУ СЮДА</span>
             </a>
           </li>
-        </ul>
+        </ul> -->
       </nav>
     </header>
     <main class="main-container main-index">
-      <div class="page-container">
-        <!--Главный баннер-->
-        <section class="main-banner">
+      <!--<div class="page-container">
+        <!-- Главный баннер -->
+         <!-- <section class="main-banner">
           <h1 class="visually-hidden">Каньон Седона</h1>
           <img
             class="main-banner-welcome"
@@ -84,9 +84,9 @@
           <p class="description-text">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
           </p>
-        </div>
+        </div>  -->
 
-        <!--Блок с преимуществами-->
+        <!-- Блок с преимуществами
         <section class="advantages">
           <h2 class="visually-hidden">Основные преимущества</h2>
           <ul class="advantages-list">
@@ -175,7 +175,7 @@
 
         <!-- Блок с вопросом -->
 
-        <section id="question" class="question-block">
+        <!-- <section id="question" class="question-block">
           <h2 class="visually-hidden">Бронирование гостинницы</h2>
           <p class="name-block">Заинтересовались?</p>
           <p class="description-text">
@@ -185,10 +185,10 @@
           <button class="question question-button" type="submit">
             поиск гостинницы в седоне
           </button>
-        </section>
+        </section> -->
 
         <!-- Форма подписки -->
-        <section class="subscription">
+        <!-- <section class="subscription">
           <h2 class="visually-hidden">Подписаться на рассылку</h2>
           <p class="name-block">Подпишитесь на рассылку</p>
           <p class="description-text">
@@ -208,11 +208,11 @@
             />
             <button class="subscribe-button" type="submit">Подписаться</button>
           </form>
-        </section>
-      </div>
+        </section> -->
+       <!-- </div> -->
     </main>
 
-    <!-- Подвал сайта -->
+    <!-- Подвал сайта
     <footer class="page-footer">
       <div class="page-footer-container">
         <section class="footer-social">
@@ -261,6 +261,6 @@
           </a>
         </section>
       </div>
-    </footer>
+    </footer>  -->
   </body>
 </html>
