убирает полосу прокрутки

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         </ul> -->
       </nav>
     </header>
-    <main class="main-container main-index">
-      <!--<div class="page-container">
+    <main class="main-container">
+      <div class="page-container">
         <!-- Главный баннер -->
-         <!-- <section class="main-banner">
+          <section class="main-banner">
           <h1 class="visually-hidden">Каньон Седона</h1>
           <img
             class="main-banner-welcome"
@@ -77,37 +77,37 @@
             alt="Добро пожаловать в великолепный Каньон Седона"
           />
         </section>
-        <div class="body-welcome">
+        <!-- <section class="body-welcome">
           <p class="name-block">
-            Седона — небольшой городок в Аризоне,<br />заслуживающий большего!
+            Седона — небольшой городок в Аризоне, заслуживающий большего!
           </p>
           <p class="description-text">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
           </p>
-        </div>  -->
+        </section> -->
 
-        <!-- Блок с преимуществами
-        <section class="advantages">
-          <h2 class="visually-hidden">Основные преимущества</h2>
-          <ul class="advantages-list">
+        <!--Блок с преимуществами -->
+        <!-- <section class="advantages">
+          <h2 class="visually-hidden">Основные преимущества</h2> -->
+          <!-- <ul class="advantages-list">
             <li class="advantages-item">
-              <div class="advantages-item-city">
-                <h3 class="advantages-title">Настоящий городок</h3>
+            <!-- <div class="advantages-item-city">
+                <!-- <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advantages-description">— №1 —</p>
                 <p class="advantages-description">
                   Седона — не аттракцион для туристов, там течёт своя жизнь
-                </p>
-              </div>
-              <img
+                </p> -->
+              <!-- </div> -->
+              <!-- <img
                 class="advantages-image"
                 src="images/photo-1.jpg"
                 alt="Изображение города Седона"
                 width="800"
                 height="384"
-              />
-            </li>
-          </ul>
-          <ul class="advantages-services">
+              /> -->
+            <!-- </li>
+          </ul> -->
+          <!-- <ul class="advantages-services">
             <li class="services-item">
               <h3 class="advantages-title">Жильё</h3>
               <p class="advantages-description">
@@ -169,9 +169,9 @@
               <p class="advantages-description">
                 Большинство едет в Гранд Каньон и толпится там
               </p>
-            </li>
-          </ul>
-        </section>
+            </li> -->
+          <!-- </ul>
+        </section> -->
 
         <!-- Блок с вопросом -->
 
@@ -209,12 +209,12 @@
             <button class="subscribe-button" type="submit">Подписаться</button>
           </form>
         </section> -->
-       <!-- </div> -->
+        </div>
     </main>
 
-    <!-- Подвал сайта
+       <!-- Подвал сайта -->
     <footer class="page-footer">
-      <div class="page-footer-container">
+      <!-- <div class="page-footer-container">
         <section class="footer-social">
           <h2 class="visually-hidden">Ссылки на социальные сети</h2>
           <ul class="footer-social-list">
@@ -260,7 +260,7 @@
             />
           </a>
         </section>
-      </div>
-    </footer>  -->
+      </div> -->
+    </footer>
   </body>
 </html>
