Убирает горизонтальный скрол

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="navigation-link" href="#">Гостинницы</a>
           </li>
         </ul>
-        <!-- <ul class="navigation-list navigation-user">
+        <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <img
@@ -61,12 +61,11 @@
               <span>ХОЧУ СЮДА</span>
             </a>
           </li>
-        </ul> -->
+        </ul>
       </nav>
     </header>
-    <main class="main-container">
+    <main class="main-container main-index">
       <div class="page-container">
-        <!-- Главный баннер -->
           <section class="main-banner">
           <h1 class="visually-hidden">Каньон Седона</h1>
           <img
@@ -77,37 +76,37 @@
             alt="Добро пожаловать в великолепный Каньон Седона"
           />
         </section>
-        <!-- <section class="body-welcome">
+        <div class="body-welcome">
           <p class="name-block">
-            Седона — небольшой городок в Аризоне, заслуживающий большего!
+            Седона — небольшой городок в Аризоне,<br />заслуживающий большего!
           </p>
           <p class="description-text">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
           </p>
-        </section> -->
+        </div>
 
-        <!--Блок с преимуществами -->
+
         <!-- <section class="advantages">
-          <h2 class="visually-hidden">Основные преимущества</h2> -->
-          <!-- <ul class="advantages-list">
+          <h2 class="visually-hidden">Основные преимущества</h2>
+          <ul class="advantages-list">
             <li class="advantages-item">
-            <!-- <div class="advantages-item-city">
-                <!-- <h3 class="advantages-title">Настоящий городок</h3>
+              <div class="advantages-item-city">
+                <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advantages-description">— №1 —</p>
                 <p class="advantages-description">
                   Седона — не аттракцион для туристов, там течёт своя жизнь
-                </p> -->
-              <!-- </div> -->
-              <!-- <img
+                </p>
+              </div>
+              <img
                 class="advantages-image"
                 src="images/photo-1.jpg"
                 alt="Изображение города Седона"
                 width="800"
                 height="384"
-              /> -->
-            <!-- </li>
-          </ul> -->
-          <!-- <ul class="advantages-services">
+              />
+            </li>
+          </ul>
+          <ul class="advantages-services">
             <li class="services-item">
               <h3 class="advantages-title">Жильё</h3>
               <p class="advantages-description">
@@ -169,13 +168,13 @@
               <p class="advantages-description">
                 Большинство едет в Гранд Каньон и толпится там
               </p>
-            </li> -->
-          <!-- </ul>
+            </li>
+          </ul>
         </section> -->
 
         <!-- Блок с вопросом -->
 
-        <!-- <section id="question" class="question-block">
+         <!-- <section id="question" class="question-block">
           <h2 class="visually-hidden">Бронирование гостинницы</h2>
           <p class="name-block">Заинтересовались?</p>
           <p class="description-text">
@@ -209,12 +208,12 @@
             <button class="subscribe-button" type="submit">Подписаться</button>
           </form>
         </section> -->
-        </div>
+       </div>
     </main>
 
-       <!-- Подвал сайта -->
-    <footer class="page-footer">
-      <!-- <div class="page-footer-container">
+
+    <!-- <footer class="page-footer">
+      <div class="page-footer-container">
         <section class="footer-social">
           <h2 class="visually-hidden">Ссылки на социальные сети</h2>
           <ul class="footer-social-list">
@@ -260,7 +259,7 @@
             />
           </a>
         </section>
-      </div> -->
-    </footer>
+      </div>
+    </footer> -->
   </body>
 </html>
