--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logotype">
           <a class="logo" href="index.html">
             <img
-              src="images/logo.svg"
+              src="../images/logo.svg"
               width="139"
               height="70"
               alt="Логотип города Седона"
@@ -56,26 +56,27 @@
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation-item-button">
-            <a class="navigation-link" href="#question">
-              <span>ХОЧУ СЮДА</span>
-            </a>
+          <li class="navigation-item">
+            <a class="button" href="#question">ХОЧУ СЮДА!</a>
           </li>
         </ul>
       </nav>
     </header>
-    <main class="main-container main-index">
+    <main class="main-container">
       <div class="page-container">
           <section class="main-banner">
-          <h1 class="visually-hidden">Каньон Седона</h1>
-          <img
+            <h1 class="visually-hidden">Каньон Седона</h1>
+           <img
             class="main-banner-welcome"
             src="images/welcome.svg"
-            width="458"
+            width="456"
             height="352"
             alt="Добро пожаловать в великолепный Каньон Седона"
-          />
-        </section>
+             />
+          <!-- <div class="decoration">
+            <img  src="../images/banner-decoration.jpg" width="1200" height="57" alt="Декоративный элемент">
+          </div> -->
+      </section>
         <div class="body-welcome">
           <p class="name-block">
             Седона — небольшой городок в Аризоне,<br>заслуживающий большего!
@@ -86,7 +87,7 @@
         </div>
 
 
-        <!-- <section class="advantages">
+        <section class="advantages">
           <h2 class="visually-hidden">Основные преимущества</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
@@ -106,14 +107,16 @@
               />
             </li>
           </ul>
-          <ul class="advantages-services">
-            <li class="services-item">
+          <ul class="advantages-services advantages-life">
+            <li class="services-item item-life">
+              <img class="housing" src="../images/variant=housing.svg" width="84" height="84">
               <h3 class="advantages-title">Жильё</h3>
               <p class="advantages-description">
                 Рекомендуем пожить в настоящем мотеле всё как в кино!
               </p>
             </li>
-            <li class="services-item">
+            <li class="services-item item-food">
+              <img class="eating" src="../images/variant=eating.svg" width="84" height="84">
               <h3 class="advantages-title">Еда</h3>
               <p class="advantages-description">
                 Всегда заказывайте топовый фирменный бургер, вы не
@@ -121,7 +124,8 @@
               </p>
             </li>
 
-            <li class="services-item">
+            <li class="services-item item-souvenirs">
+              <img class="souvenir" src="../images/variant=souvenir.svg" width="84" height="84">
               <h3 class="advantages-title">Сувениры</h3>
               <p class="advantages-description">
                 Не только китайского, но и настоящего местного производства!
@@ -148,21 +152,21 @@
             </li>
           </ul>
           <ul class="advantages-services">
-            <li class="services-item">
+            <li class="item-dignities">
               <h3 class="advantages-title">Небольшая<br />площадь</h3>
               <p class="advantages-description">— №3 —</p>
               <p class="advantages-description">
                 Все достопримечательности находятся очень близко
               </p>
             </li>
-            <li class="services-item">
+            <li class="item-dignities item-road">
               <h3 class="advantages-title">Красивая<br />дорога</h3>
               <p class="advantages-description">— №4 —</p>
               <p class="advantages-description">
                 Ехать в Седону из Лас-Вегаса совсем не скучно!
               </p>
             </li>
-            <li class="services-item">
+            <li class="item-dignities">
               <h3 class="advantages-title">Мало<br />туристов</h3>
               <p class="advantages-description">— №5 —</p>
               <p class="advantages-description">
@@ -170,11 +174,11 @@
               </p>
             </li>
           </ul>
-        </section> -->
+        </section>
 
         <!-- Блок с вопросом -->
 
-         <!-- <section id="question" class="question-block">
+         <section id="question" class="question-block">
           <h2 class="visually-hidden">Бронирование гостинницы</h2>
           <p class="name-block">Заинтересовались?</p>
           <p class="description-text">
@@ -184,10 +188,10 @@
           <button class="question question-button" type="submit">
             поиск гостинницы в седоне
           </button>
-        </section> -->
+        </section>
 
         <!-- Форма подписки -->
-        <!-- <section class="subscription">
+        <section class="subscription">
           <h2 class="visually-hidden">Подписаться на рассылку</h2>
           <p class="name-block">Подпишитесь на рассылку</p>
           <p class="description-text">
@@ -207,12 +211,12 @@
             />
             <button class="subscribe-button" type="submit">Подписаться</button>
           </form>
-        </section> -->
+        </section>
        </div>
     </main>
 
 
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
       <div class="page-footer-container">
         <section class="footer-social">
           <h2 class="visually-hidden">Ссылки на социальные сети</h2>
@@ -260,6 +264,6 @@
           </a>
         </section>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
